WRP-2162 - fixed the css making this appear incorrectly WRP-2108 - fixed alignment issue on X (see screenshot) WRP-1851 - fixed the css that was causing this title text to double line in classification view. WRP-2109 - fixed css causing the task details in the dark theme to be too dark to read

--- a/app/styles/dark.scss
+++ b/app/styles/dark.scss
@@ -430,8 +430,9 @@ color:#fff;
     font-size: 13px;
     margin: 0;
     font-weight: 400;
-    color: #a2a5a7;
+    color: #eee!important;
 }
+.sca-dark .timeline-title p{ color: #eee!important;}
 .sca-dark .classification-report, .sca-dark .feedback-header {
    
     background-color: #262e39;
